--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,15 @@
 theme: jekyll-theme-hacker
-baseurl: "/blog"
+url: 'http://machari.github.io' # your host
+baseurl: '/'
+
+# Navigation links
+nav:
+  home: '/'
+  tags: '/tags.html'
+  
+markdown: kramdown
+highlighter: rouge
+redcarpet:
+    extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript", "with_toc_data", "tables"]
+kramdown:
+  input: GFM
